[tool.poetry]
name = "cancerclassifier"
version = "0.0.0"
description = "A small python package for CNN app"
authors = ["Sai Aditya Guntupalli <aadiaditya6699@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aadiaditya/mlops-endtoend-project-deeplearning"
repository = "https://github.com/aadiaditya/mlops-endtoend-project-deeplearning"
documentation = "https://github.com/aadiaditya/mlops-endtoend-project-deeplearning"
keywords = ["CNN", "deep learning", "MLOps"]
packages = [{ include = "cancerclassifier", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "2.17.0"
pandas = "*"
gdown = "*"
dvc = "*"
mlflow = "2.16.2"
notebook = "*"
numpy = "*"
matplotlib = "*"
seaborn = "*"
python-box = "7.2.0"
pyyaml = "*"
tqdm = "*"
ensure = "1.0.2"
joblib = "*"
types-PyYAML = "*"
scipy = "*"
flask = "*"
flask-cors = "*"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
